--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
                 <li>Deploying websites on GitHub Pages</li>
             </ul>
         </section>
+        <section id="feedback">
+    <h2>Feedback</h2>
+    <p>We value your feedback! Please share your comments or suggestions below:</p>
+    <form>
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" placeholder="Your name"><br><br>
+        <label for="comments">Comments:</label><br>
+        <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Your comments"></textarea><br><br>
+        <input type="submit" value="Submit">
+    </form>
+</section>
+
+<section id="more-features">
+    <h2>More Capabilities</h2>
+    <p>In addition to the features listed above, the ChatGPT Operator can:</p>
+    <ul>
+        <li>Assist with code reviews and debugging</li>
+        <li>Generate documentation and reports</li>
+        <li>Provide insights and recommendations based on data analysis</li>
+    </ul>
+</section>
     </div>
     <footer>
         <p>ChatGPT Operator Demo &copy; 2025</p>
