Add Salesforce DevOps section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
         <li>Provide insights and recommendations based on data analysis</li>
     </ul>
 </section>
+        <section id="salesforce-devops">
+    <h2>Salesforce DevOps</h2>
+    <p>Salesforce DevOps is a set of practices that combines software development and IT operations to shorten the development lifecycle and provide continuous delivery of high-quality software. Key aspects include:</p>
+    <ul>
+        <li>Version Control: Managing changes to Salesforce metadata and code.</li>
+        <li>Continuous Integration: Automating the integration of code changes.</li>
+        <li>Continuous Deployment: Automating the release process.</li>
+        <li>Testing: Ensuring code quality through automated testing.</li>
+    </ul>
+</section>
     </div>
     <footer>
         <p>ChatGPT Operator Demo &copy; 2025</p>
