--- a/index.html
+++ b/index.html
@@ -59,28 +59,12 @@
                 <li>Editing and committing files</li>
                 <li>Deploying websites on GitHub Pages</li>
             </ul>
-        </section>
-        <section id="feedback">
+        </sect
+<section id="feedback">
     <h2>Feedback</h2>
-    <p>We value your feedback! Please share your comments or suggestions below:</p>
-    <form>
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" placeholder="Your name"><br><br>
-        <label for="comments">Comments:</label><br>
-        <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Your comments"></textarea><br><br>
-        <input type="submit" value="Submit">
-    </form>
-</section>
-
-<section id="more-features">
-    <h2>More Capabilities</h2>
-    <p>In addition to the features listed above, the ChatGPT Operator can:</p>
-    <ul>
-        <li>Assist with code reviews and debugging</li>
-        <li>Generate documentation and reports</li>
-        <li>Provide insights and recommendations based on data analysis</li>
-    </ul>
-</section>
+    <p>For any feedback or inquiries, please feel free to message me on <a href="https://www.linkedin.com/in/julianjoseph">LinkedIn</a>.</p>
+</section>ion>
+   
         <section id="salesforce-devops">
     <h2>Salesforce DevOps</h2>
     <p>Salesforce DevOps is a set of practices that combines software development and IT operations to shorten the development lifecycle and provide continuous delivery of high-quality software. Key aspects include:</p>
