Fix HTML tag issue and update Feedback section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
             </ul>
     </sect
 <section id="feedback">
-    <h2>Feedback</h2>
-    <p>For any feedback or inquiries, please feel free to message me on <a href="https://www.linkedin.com/in/julianjoseph">LinkedIn</a>.</p>
+    <h2For any feedback or inquiries, please feel free to message me on <a href="https://www.linkedin.com/in/julianjoseph">LinkedIn</a>.</p>
 </section>ion>
    
         <section id="salesforce-devops">
