Removed extra characters after closing section tag.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </sect
 <section id="feedback">
     <h2For any feedback or inquiries, please feel free to message me on <a href="https://www.linkedin.com/in/julianjoseph">LinkedIn</a>.</p>
-</section>io
+</sectiono
    
         <section id="salesforce-devops">
     <h2>Salesforce DevOps</h2>
